[gd_scene load_steps=10 format=2]

[ext_resource path="res://TELAS/verdadeiro_falso2.png" type="Texture" id=1]
[ext_resource path="res://Voguing.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/RichTextLabel_perg_vf.gd" type="Script" id=3]
[ext_resource path="res://telas placeholder/Sem grid/darkbg.png" type="Texture" id=4]
[ext_resource path="res://scenes/certo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/me_botao_errou.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/vf_botao_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/vf_botao_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/pula_e_sair_buttons.tscn" type="PackedScene" id=9]

[node name="Node" type="Node"]

[node name="tela placeholder" type="Sprite" parent="." index="0"]

position = Vector2( 457.396, 804.71 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="text_pergunta" type="RichTextLabel" parent="." index="1" groups=[
"vf_question",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 317.0
margin_right = 457.0
margin_bottom = 469.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 3 )
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="timerText" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.06007
anchor_bottom = 0.0
margin_left = 73.0
margin_top = 139.0
margin_right = 104.336
margin_bottom = 176.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "custom_fonts" ]

[node name="lifesText" type="RichTextLabel" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.06007
anchor_bottom = 0.0
margin_left = 370.0
margin_top = 205.0
margin_right = 345.336
margin_bottom = 238.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "Rect", "custom_fonts" ]

[node name="jumpsText" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.06007
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 205.0
margin_right = 595.336
margin_bottom = 238.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "Rect", "custom_fonts" ]

[node name="darkbg" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 457.396, 807.499 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 50.0
one_shot = false
autostart = true

[node name="certo" parent="." index="7" instance=ExtResource( 5 )]

visible = false
position = Vector2( 406.387, 910.31 )

[node name="errado" parent="." index="8" instance=ExtResource( 6 )]

visible = false
position = Vector2( 395.265, 913.311 )
scale = Vector2( 1, 1 )
z_index = 1

[node name="botoes" type="Node2D" parent="." index="9"]

[node name="botao1" parent="botoes" index="0" instance=ExtResource( 7 )]

position = Vector2( 437.292, 835.245 )
scale = Vector2( 1.09428, 0.605066 )
_sections_unfolded = [ "Transform" ]

[node name="botao2" parent="botoes" index="1" instance=ExtResource( 8 )]

position = Vector2( 437.292, 1043.08 )
scale = Vector2( 1.09428, 0.605066 )
_sections_unfolded = [ "Transform" ]

[node name="pular_e_sair_buttons" parent="." index="10" instance=ExtResource( 9 )]


